# Advent-of-Code-2025

./: .gitignore  .pylintrc  README.md  advent25.py  pyproject.toml
docs/: design.md  writeup.md
src/advent/: __init__.py  challenge.py  day01.py  day02.py
src/advent25/: __init__.py  challenge.py  day01.py  day02.py  day03.py  day04.py  day05.py
test/: test_challenges.py
